--- a/Produktkatalog/DataTemplate/DataTemplates.xaml
+++ b/Produktkatalog/DataTemplate/DataTemplates.xaml
@@ -1,9 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Produktkatalog.DataTemplate"
-                    xmlns:model="clr-namespace:Produktkatalog.Model">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     
-    <DataTemplate x:Key="DetailTemplate" DataType="{x:Type model:Product}">
+    <DataTemplate x:Key="DetailTemplate">
         <Grid  Background="White" x:Name="DetailView">
             <Grid>
                 <Grid.ColumnDefinitions>
@@ -108,8 +106,8 @@
                     </StackPanel>
                 </Grid>
             </Grid>
-
         </Grid>
     </DataTemplate>
+
 
 </ResourceDictionary>
