--- a/Produktkatalog/Resources/MainWindowResources.xaml
+++ b/Produktkatalog/Resources/MainWindowResources.xaml
@@ -4,7 +4,7 @@
                     xmlns:view="clr-namespace:Produktkatalog.View">
 
     <DataTemplate DataType="{x:Type viewModel:ProductTilesViewModel}">
-        <view:ProductTilesView/>
+        <view:TilesAndDetail/>
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type viewModel:DetailProductViewModel}">
